tree-sitter-jinja2/test/corpus/raw_block.txt
========
raw
========

before {% raw %} this is a {{ raw }} {% block %} {% endraw %} after

before {%- raw %} this is a {{ raw }} {% block %} {% endraw -%} after

before {%- raw -%} this is a {{ raw }} {% block %} {%- endraw -%} after

{% raw %}
# endraw
{% endraw %}

---

(source
  (definition)
  (definition
    (raw_block
      (raw_start)
      (raw_body)
      (raw_end)))
  (definition)
  (definition
    (raw_block
      (raw_start)
      (raw_body)
      (raw_end)))
  (definition)
  (definition
    (raw_block
      (raw_start)
      (raw_body)
      (raw_end)))
  (definition)
  (definition
    (raw_block
      (raw_start)
      (raw_body)
      (raw_end)))
  (definition))
